--- a/index.html
+++ b/index.html
@@ -57,13 +57,11 @@
     <div class="container" style="padding-top: 50px;">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p> Game reviews are an ever-changing entity, and the longer they have existed the more apparent their various flaws have become. Reviewers are too afraid to criticise games harshly and are often out of touch with what the wider audience likes and dislikes. This disparity can be shown by comparing the best-selling video games of 2017 to their average review score on console. </p>
+          <p> Video game reviews are constantly criticised for bias towards larger publishers and a general disconnection from the general playerbase. Reviewers are often too afraid to criticise games harshly, which essentially undermines the entire concept of video game reviews as a profession. Boring or generally bad AAA games should be labelled as such to prevent audiences from wasting time and money.The disparity between professional reviewers and their readers can be shown by comparing the 25 best-selling video games of 2018 so far to their average review score. </p>
 
-          <script type='text/javascript' src='https://dub01.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 300px;'><object class='tableauViz' width='100%' height='774' style='display:none;'><param name='host_url' value='https%3A%2F%2Fdub01.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;elliswardathotmailcouk' /><param name='name' value='VideoGameCharts&#47;Sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object></div>
-
-          <p>
-Now you’d think the best sales would mean the best reviews, but that isn’t always the case. Select any game from these 20 best-sellers and see how the sales compare to the ratings.
-</p>
+          <img src="game data plot.png" alt="scatter chart" style="width:500px;height:600px;">
+          
+          <p> However, the data represented in this chart suggests that on average, reviewers do get it right. There might be the occasional reviewer at odds with his audience, but on a larger scale, this proves that poorly reviewed games sell less on average and vice versa. If you're curious about which games placed on the top 100 best-selling games of 2018 so far, take a look at the drop-down list below. </p>
 
           <h2 style="padding-top:50px;">Pick Name of Video Game...</h2>
           <select id="videogameselector" onchange="changevideogame()" class="form-control">
@@ -92,10 +90,6 @@ Now you’d think the best sales would mean the best reviews, but that isn’t a
 
           <h6 style="padding-top:50px;">European Sales for 2018: <b id="globalsales">-</b></h6>
           <h6 style="display:none">Average Review Scores: <b id="avgreview">-</b></h6>
-
-
-          <p style="padding-top:50px;">As you can see, the figures don’t always match up. The top Nintendo games such as Mario Odyssey are high in both sales and ratings, but best sellers such as Call of Duty and FIFA have surprisingly low ratings for professional reviewing standards. Anything below 80 can generally be interpreted as not having impressed the reviewer. This could be chalked up the repetitive yearly release of these specific titles, but there are other inconsistencies as well. For a full comparison of the 50 best-selling games of 2017, look at the chart below.</p>
-<script type='text/javascript' src='https://dub01.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 810px;'><object class='tableauViz' width='100%' height='810' style='display:none;'><param name='host_url' value='https%3A%2F%2Fdub01.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;elliswardathotmailcouk' /><param name='name' value='VideoGameCharts&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object></div>
 
         </div>
 
