--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <p> Video game reviews are constantly criticised for bias towards larger publishers and a general disconnection from the general playerbase. Reviewers are often too afraid to criticise games harshly, which essentially undermines the entire concept of video game reviews as a profession. Boring or generally bad AAA games should be labelled as such to prevent audiences from wasting time and money.The disparity between professional reviewers and their readers can be shown by comparing the 25 best-selling video games of 2018 so far to their average review score. </p>
 
-          <img src="Game data plot.png" alt="scatter chart" style="width:500px;height:500px;">
+          <img src="Rplot.png" alt="scatter chart" style="width:500px;height:500px;">
           
           <p> However, the data represented in this chart suggests that on average, reviewers do get it right. There might be the occasional reviewer at odds with his audience, but on a larger scale, this proves that poorly reviewed games sell less on average and vice versa. If you're curious about which games placed on the top 100 best-selling games of 2018 so far, take a look at the drop-down list below. </p>
 
